# data-harvester

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  appconfig.ini  continue_history.py  december_commits.py  final_commits.py  harvest_main.py  pyproject.toml  rename_project.sh  requirements.txt  setup.py
aggregate/: aggregate.py
benchmarks/: __init__.py  bench_classify.py  bench_extract.py  bench_parallel.py  bench_scrub.py  conftest.py  run_benchmarks.py
benchmarks/results/: .gitkeep
classifier/: train.py
classify/: __init__.py  classify.py  train.py
cleaner/: __init__.py  clean.py
common/: __init__.py  app_config.py  delta_detector.py  env_config.py  file_utilities.py  logger.py  parallel_processor.py  s3_cache.py  s3_download.py  s3_upload.py  s3_utilities.py  validators.py  version.py  yaml_config.py
config/: plugin_config.yaml
crawler/webscraper/: item_loaders.py  items.py  middlewares.py  pipelines.py  settings.py
crawler/webscraper/spiders/: example_spider.py
data_loader/: __init__.py
docs/: ARCHITECTURE.md  PLUGIN_DEVELOPMENT.md  SETUP.md
enrich/: __init__.py  enrich_pipeline.py
extractor/: __init__.py  extract.py  pdf_extractor.py
ingest/webscraper/: item_loaders.py  middlewares.py  pipelines.py  settings.py
json_converter/: __init__.py  converttojson.py  error_handling.py  xml_converter.py
plugins/: README.md
plugins/core/: plugin_base.py  plugin_loader.py
plugins/examples/: .gitkeep
plugins/examples/drug_discovery/: __init__.py  plugin.yaml
scripts/: validate_config.py  verify_install.py
scrub/: clean.py
seed_data/: README.md
seed_data/ecommerce/: products.json  reviews.json
seed_data/technical_docs/: api_documentation.json  user_guides.json
seed_data/web_content/: articles.json  blog_posts.json
tests/: test_core.py
